
[TestInstallCommandInteractivePTYFinalSnapshotLongListTallHeight - 1]
cmd.install.header.success
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [modrinth]
✅ Beta Two (beta-2) [modrinth]
✅ Chi (chi) [modrinth]
✅ Delta (delta) [modrinth]
✅ Delta Two (delta-2) [modrinth]
✅ Epsilon (epsilon) [modrinth]
✅ Epsilon Two (epsilon-2) [modrinth]
✅ Eta (eta) [modrinth]
✅ Eta Two (eta-2) [modrinth]
✅ Gamma (gamma) [modrinth]
✅ Gamma Two (gamma-2) [modrinth]
✅ Iota (iota) [modrinth]
✅ Kappa (kappa) [modrinth]
✅ Lambda (lambda) [modrinth]
✅ Mu (mu) [modrinth]
✅ Nu (nu) [modrinth]
✅ Omega (omega) [modrinth]
✅ Omicron (omicron) [modrinth]
✅ Phi (phi) [modrinth]
✅ Pi (pi) [modrinth]
✅ Psi (psi) [modrinth]
✅ Rho (rho) [modrinth]
✅ Sigma (sigma) [modrinth]
✅ Tau (tau) [modrinth]
✅ Theta (theta) [modrinth]
✅ Upsilon (upsilon) [modrinth]
✅ Xi (xi) [modrinth]
✅ Zeta (zeta) [modrinth]
✅ Zeta Two (zeta-2) [modrinth]

✅ cmd.install.summary.success
---

[TestInstallCommandInteractivePTYFinalSnapshotLongListMediumHeight - 1]
cmd.install.header.success
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [modrinth]
✅ Beta Two (beta-2) [modrinth]
✅ Chi (chi) [modrinth]
✅ Delta (delta) [modrinth]
✅ Delta Two (delta-2) [modrinth]
✅ Epsilon (epsilon) [modrinth]
✅ Epsilon Two (epsilon-2) [modrinth]
✅ Eta (eta) [modrinth]
✅ Eta Two (eta-2) [modrinth]
✅ Gamma (gamma) [modrinth]
✅ Gamma Two (gamma-2) [modrinth]
✅ Iota (iota) [modrinth]
✅ Kappa (kappa) [modrinth]
✅ Lambda (lambda) [modrinth]
✅ Mu (mu) [modrinth]
✅ Nu (nu) [modrinth]
✅ Omega (omega) [modrinth]
✅ Omicron (omicron) [modrinth]
✅ Phi (phi) [modrinth]
✅ Pi (pi) [modrinth]
✅ Psi (psi) [modrinth]
✅ Rho (rho) [modrinth]
✅ Sigma (sigma) [modrinth]
✅ Tau (tau) [modrinth]
✅ Theta (theta) [modrinth]
✅ Upsilon (upsilon) [modrinth]
✅ Xi (xi) [modrinth]
✅ Zeta (zeta) [modrinth]
✅ Zeta Two (zeta-2) [modrinth]

cmd.install.header.success
✅ cmd.install.summary.success
---

[TestInstallCommandInteractivePTYRunningSnapshotLongListShortHeight - 1]
cmd.install.header.success
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [modrinth]
✅ Beta Two (beta-2) [modrinth]
✅ Chi (chi) [modrinth]
✅ Delta (delta) [modrinth]
✅ Delta Two (delta-2) [modrinth]
✅ Epsilon (epsilon) [modrinth]
✅ Epsilon Two (epsilon-2) [modrinth]
✅ Eta (eta) [modrinth]
✅ Eta Two (eta-2) [modrinth]
✅ Gamma (gamma) [modrinth]
✅ Gamma Two (gamma-2) [modrinth]
✅ Iota (iota) [modrinth]
✅ Kappa (kappa) [modrinth]
✅ Lambda (lambda) [modrinth]
✅ Mu (mu) [modrinth]
✅ Nu (nu) [modrinth]
✅ Omega (omega) [modrinth]
✅ Omicron (omicron) [modrinth]
✅ Phi (phi) [modrinth]
✅ Pi (pi) [modrinth]
✅ Psi (psi) [modrinth]
✅ Rho (rho) [modrinth]
✅ Sigma (sigma) [modrinth]
✅ Tau (tau) [modrinth]
✅ Theta (theta) [modrinth]
✅ Upsilon (upsilon) [modrinth]
✅ Xi (xi) [modrinth]
✅ Zeta (zeta) [modrinth]
✅ Zeta Two (zeta-2) [modrinth]
---
